# django-vanya

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  manage.py  pyproject.toml  test_output.txt
config/: settings.py  test_runner.py  urls.py
tasks/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/tests/: __init__.py  test_api.py  test_auth.py  test_forms.py  test_models.py  test_views.py
templates/: base.html
templates/includes/: form_fields.html
templates/registration/: logged_out.html  login.html  signup.html
templates/tasks/: home.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
